--- a/index.html
+++ b/index.html
@@ -1,7 +1,28 @@
-<!DOCTYPE html>
 <html>
+<head>
+    <title>Award Winners</title>
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "BreadcrumbList",
+          "itemListElement": [{
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Books",
+            "item": "https://example.com/books"
+          },{
+            "@type": "ListItem",
+            "position": 2,
+            "name": "Science Fiction",
+            "item": "https://example.com/books/sciencefiction"
+          },{
+            "@type": "ListItem",
+            "position": 3,
+            "name": "Award Winners"
+          }]
+        }
+    </script>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
