--- a/index.html
+++ b/index.html
@@ -1,28 +1,10 @@
 <html>
-<head>
+  <head>
     <title>Award Winners</title>
-    <script type="application/ld+json">
-        {
-          "@context": "https://schema.org",
-          "@type": "BreadcrumbList",
-          "itemListElement": [{
-            "@type": "ListItem",
-            "position": 1,
-            "name": "Books",
-            "item": "https://example.com/books"
-          },{
-            "@type": "ListItem",
-            "position": 2,
-            "name": "Science Fiction",
-            "item": "https://example.com/books/sciencefiction"
-          },{
-            "@type": "ListItem",
-            "position": 3,
-            "name": "Award Winners"
-          }]
-        }
-    </script>
-</head>
-<body>
-</body>
+
+  </head>
+Test json
+  <body>
+      <link href="scriptjson.js" rel="alternate"  type ="application/ld+json" />
+  </body>
 </html>
