--- a/EmbededRichResult.html
+++ b/EmbededRichResult.html
@@ -1,6 +1,11 @@
 <html>
 <head>
     <title>Award Winners</title>
+
+</head>
+<body>
+
+    <p> Here's an example in JSON-LD to support that breadcrumb that is embeded:</p>
     <script type="application/ld+json">
         {
           "@context": "https://schema.org",
@@ -22,7 +27,5 @@
           }]
         }
     </script>
-</head>
-<body>
 </body>
 </html>
