--- a/IncludedRichResult.html
+++ b/IncludedRichResult.html
@@ -4,6 +4,7 @@
 
   </head>
   <body>
+      <p>Here's an example in JSON-LD to support that breadcrumb that is in included file: </p>
       <link href="scriptjson.js" rel="alternate"  type ="application/ld+json" />
   </body>
 </html>
