--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
   <head>
-    <title>Award Winners</title>
+    <title>Homepage</title>
 
   </head>
-Test json
+
   <body>
-      <link href="scriptjson.js" rel="alternate"  type ="application/ld+json" />
+     <a href="EmbededRichResult.html">Embeded example</a>
+<       a href="IncludedRichResult.html">Included file example</a>
+
   </body>
 </html>
