--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   </head>
 
   <body>
-       <a href="EmbededRichResult.html">Embeded example</a>
-       <a href="IncludedRichResult.html">Included file example</a>
+       <p><a href="EmbededRichResult.html">Embeded example</a> </p>
+       <p><a href="IncludedRichResult.html">Included file example</a> </p>
 
   </body>
 </html>
