--- a/IncludedRichResult.html
+++ b/IncludedRichResult.html
@@ -5,6 +5,6 @@
   </head>
   <body>
       <p>Here's an example in JSON-LD to support that breadcrumb that is in included file: </p>
-      <link href="scriptjsonld.js" rel="alternate"  type ="application/ld+json" />
+      <link href="https://lukincc.github.io/webtest/scriptjsonld.js" rel="alternate"  type ="application/ld+json" />
   </body>
 </html>
